tests/errors/enum_type_variant_rejected_none.ptt
// Language-law cleanup: `Option of int .None()` is rejected;
// users write `none of int ()`.

use std/option

spark {
  n is Option of int .None()
  yell(n.is_none())
}
